Bug 506549 - Zooming in a few more ticks beyond the maximum limit turns the magnifier effect into a fullscreen thumbnail
Summary: Zooming in a few more ticks beyond the maximum limit turns the magnifier effe...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 6.4.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-03 18:56 UTC by Tech-Tac
Modified: 2025-07-10 16:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tech-Tac 2025-07-03 18:56:55 UTC
STEPS TO REPRODUCE
1. Enable Magnifier effect
2. Zoom in like, a lot

OBSERVED RESULT
The magnifier box turns into a mini preview of the whole screen

EXPECTED RESULT
Not do that

SOFTWARE/OS VERSIONS
Linux: Arch
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Comment 1 TraceyC 2025-07-07 22:06:19 UTC
I'm am able to reproduce this on git-master. Note: The zoom and magnify effects were moved under Accessibility
I am also able to reproduce on Fedora 42
Comment 2 Bug Janitor Service 2025-07-08 08:21:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7891
Comment 3 Vlad Zahorodnii 2025-07-09 09:12:55 UTC
Git commit f1ae726839a5782b7227126d490570ffac6ec3c1 by Vlad Zahorodnii.
Committed on 09/07/2025 at 08:53.
Pushed by vladz into branch 'master'.

plugins/magnifier: Constrain zoom factors

With extreme zoom factors, the source rect will be empty, which will
make the GLFramebuffer blit the whole framebuffer.

In order to prevent that, this change constrains the zoom factor to a
reasonable range. The zoom effect already does this.

M  +33   -33   src/plugins/magnifier/magnifier.cpp
M  +2    -0    src/plugins/magnifier/magnifier.h

https://invent.kde.org/plasma/kwin/-/commit/f1ae726839a5782b7227126d490570ffac6ec3c1
Comment 4 Vlad Zahorodnii 2025-07-09 09:55:43 UTC
Git commit b83d55c764bb69687295da7351573996decd3dd4 by Vlad Zahorodnii.
Committed on 09/07/2025 at 09:27.
Pushed by vladz into branch 'Plasma/6.4'.

plugins/magnifier: Constrain zoom factors

With extreme zoom factors, the source rect will be empty, which will
make the GLFramebuffer blit the whole framebuffer.

In order to prevent that, this change constrains the zoom factor to a
reasonable range. The zoom effect already does this.
(cherry picked from commit f1ae726839a5782b7227126d490570ffac6ec3c1)

M  +33   -33   src/plugins/magnifier/magnifier.cpp
M  +2    -0    src/plugins/magnifier/magnifier.h

https://invent.kde.org/plasma/kwin/-/commit/b83d55c764bb69687295da7351573996decd3dd4