plugins/magnifier: Constrain zoom factors

With extreme zoom factors, the source rect will be empty, which will
make the GLFramebuffer blit the whole framebuffer.

In order to prevent that, this change constrains the zoom factor to a
reasonable range. The zoom effect already does this.

BUG: 506549
(cherry picked from commit f1ae726839a5782b7227126d490570ffac6ec3c1)