src/plugins/magnifier/magnifier.h
@@ -48,6 +48,8 @@ private Q_SLOTS:
 
 private:
     QRect magnifierArea(QPointF pos = cursorPos()) const;
+    void setTargetZoom(double zoomFactor);
+
     double m_zoom;
     double m_targetZoom;
     std::chrono::milliseconds m_lastPresentTime;
